--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,19 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   google_fonts: ^6.2.0
   font_awesome_flutter: ^10.12.0
+  dio: ^5.9.0
+  hive: ^2.2.3
+  pretty_dio_logger: ^1.4.0
+  hive_flutter: ^1.1.0
+  logger: ^2.6.2
+  dartz: ^0.10.1
+  flutter_riverpod: ^3.0.3
+  riverpod: ^3.0.3
+  get_it: ^8.2.0
+  loading_overlay: ^0.3.0
+  flutter_styled_toast: ^2.2.1
+  intl: ^0.19.0
+  fade_shimmer: ^2.4.0
 
 dev_dependencies:
   flutter_test:
