--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_styled_toast: ^2.2.1
   intl: ^0.19.0
   fade_shimmer: ^2.4.0
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
