--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   intl: ^0.19.0
   fade_shimmer: ^2.4.0
   timeago: ^3.7.1
+  flutter_dotenv: ^6.0.0
+  cloudinary_public: ^0.23.1
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +46,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/pngs/
     - assets/jpgs/
     - assets/fonts/
