--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   flutter_dotenv: ^6.0.0
   cloudinary_public: ^0.23.1
   image_picker: ^1.2.0
+  audio_waveforms: ^1.3.0
+  just_audio: ^0.10.5
+  cached_network_image: ^3.4.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
