--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   just_audio: ^0.10.5
   cached_network_image: ^3.4.1
   permission_handler: ^12.0.1
+  jiffy:
 
 dev_dependencies:
   flutter_test:
