--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   cached_network_image: ^3.4.1
   permission_handler: ^12.0.1
   jiffy:
+  onesignal_flutter: ^5.3.4
 
 dev_dependencies:
+  change_app_package_name: ^1.5.0
   flutter_test:
     sdk: flutter
 
