--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   permission_handler: ^12.0.1
   jiffy:
   onesignal_flutter: ^5.3.4
+  agora_rtc_engine: ^6.5.0
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   change_app_package_name: ^1.5.0
